fix(blog): align aside sticky offset and max-height with sidebar

--- a/_sass/components/_blog.scss
+++ b/_sass/components/_blog.scss
@@ -172,8 +172,8 @@ html[data-blog-view='list'] .view-toggle__btn[data-view='list'] {
 
   &.is-sticky {
     position: sticky;
-    top: var(--header-h);
-    max-height: calc(100vh - var(--header-h) - #{$sp-6});
+    top: calc(var(--header-h) + #{$sp-3});
+    max-height: calc(100vh - var(--header-h) - #{$sp-3} - #{$sp-6});
     overflow-y: auto;
     overflow-x: hidden;
     scrollbar-width: none;
